[project]
name = "nonebot-plugin-adsblocker"
version = "0.1.0"
description = "NoneBot 广告屏蔽插件，支持AI检测和二维码识别"
authors = [
    { name = "Heartestrella", email = "admin@neossh.top" },
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["nonebot", "nonebot2", "adblock", "advertisement", "qrcode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: NoneBot",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "nonebot2>=2.0.0",
    "nonebot-adapter-onebot>=2.0.0",
    "httpx>=0.24.0",
    "sqlite3",
    "nonebot-plugin-localstore",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/yourname/nonebot-plugin-adsblocker"
Repository = "https://github.com/yourname/nonebot-plugin-adsblocker"
Documentation = "https://github.com/yourname/nonebot-plugin-adsblocker#readme"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"